[gd_scene load_steps=10 format=3 uid="uid://b0brk53uqwo01"]

[ext_resource type="Script" path="res://src/title_control.gd" id="1_54m68"]
[ext_resource type="AudioStream" uid="uid://ckg3w6p6m1wfv" path="res://assets-dragg/audio/background.mp3" id="2_bh75g"]
[ext_resource type="FontFile" uid="uid://cibq3ki8d1cgt" path="res://ui/fonts/Salsa-Regular.ttf" id="2_s0s0v"]
[ext_resource type="Theme" uid="uid://cw5e22i0akvq5" path="res://casual_theme.tres" id="4_jtxnp"]
[ext_resource type="Script" path="res://src/button_control.gd" id="5_phmg3"]
[ext_resource type="LabelSettings" uid="uid://bwjg65ahtyke3" path="res://ui/resources/button_label_M.tres" id="8_glmpu"]
[ext_resource type="AudioStream" uid="uid://bs43433qmf4j7" path="res://assets-dragg/audio/punchy-taps-ui-5-183901.mp3" id="8_jqiv3"]
[ext_resource type="Texture2D" uid="uid://d0iyg5kkk51iu" path="res://assets-dragg/casual_ui/button/Btn_OtherButton_Hexagon01_Blue.png" id="10_qfu0c"]

[sub_resource type="LabelSettings" id="LabelSettings_lv0bh"]
font_size = 200
font_color = Color(0, 0, 0, 1)

[node name="TitleControl" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_54m68")

[node name="TitleAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bh75g")
volume_db = -80.0

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 341.0
offset_right = 1082.0
offset_bottom = 587.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_s0s0v")
theme_override_font_sizes/font_size = 200
text = "DRAGG"
label_settings = SubResource("LabelSettings_lv0bh")
horizontal_alignment = 1

[node name="ButtonControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 551.0
offset_top = 1971.0
offset_right = 551.0
offset_bottom = 1971.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_jtxnp")
script = ExtResource("5_phmg3")

[node name="TextureButton" type="TextureButton" parent="ButtonControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -99.5
offset_right = 82.5
offset_bottom = 99.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(82, 99)
theme = ExtResource("4_jtxnp")
texture_normal = ExtResource("10_qfu0c")

[node name="Label" type="Label" parent="ButtonControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -59.0
offset_right = 79.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
text = "GO"
label_settings = ExtResource("8_glmpu")

[node name="TapAudio" type="AudioStreamPlayer" parent="ButtonControl"]
stream = ExtResource("8_jqiv3")

[connection signal="button_down" from="ButtonControl/TextureButton" to="ButtonControl" method="_on_texture_button_button_down"]
[connection signal="button_up" from="ButtonControl/TextureButton" to="ButtonControl" method="_on_texture_button_button_up"]
